tests/snapshots/run_wpt_conformance__onnx_gather_float16_2D_tensor_and_3D_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gather.https.any.js",
    "gather float16 2D tensor and 3D indices default options",
    "onnx",
    "PASS",
)
